schemars/tests/ui/invalid_attrs.stderr
error: expected serde default attribute to be a string: `default = "..."`
 --> $DIR/invalid_attrs.rs:4:19
  |
4 | #[serde(default = 0, foo, deny_unknown_fields, deny_unknown_fields)]
  |                   ^

error: duplicate serde attribute `deny_unknown_fields`
 --> $DIR/invalid_attrs.rs:4:48
  |
4 | #[serde(default = 0, foo, deny_unknown_fields, deny_unknown_fields)]
  |                                                ^^^^^^^^^^^^^^^^^^^

error: expected serde default attribute to be a string: `default = "..."`
 --> $DIR/invalid_attrs.rs:8:22
  |
8 | #[schemars(default = 0, foo, deny_unknown_fields, deny_unknown_fields)]
  |                      ^

error: duplicate serde attribute `deny_unknown_fields`
 --> $DIR/invalid_attrs.rs:8:51
  |
8 | #[schemars(default = 0, foo, deny_unknown_fields, deny_unknown_fields)]
  |                                                   ^^^^^^^^^^^^^^^^^^^

error: unknown schemars attribute `foo`
 --> $DIR/invalid_attrs.rs:8:25
  |
8 | #[schemars(default = 0, foo, deny_unknown_fields, deny_unknown_fields)]
  |                         ^^^
